Removed the flow of pdf

--- a/public/quick-purchase.html
+++ b/public/quick-purchase.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Quick Purchase</title>
   <!-- jsPDF CDN for PDF generation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script> -->
   <meta
     content="Our aim is to produce products complying with high level of consumer safety standards with affordable pricing our main motto is “our customer joy is our pride”. We serve quality crackers to our customer to make their days as colorful celebration. We have products of hi-fi quality standards complying with all global standards and specifications."
     name="description">
