Before terms and condition

--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -69,7 +69,7 @@
           <div class="navlinks-wrapper">
             <a href="index.html" class="nav-link w-nav-link">Home</a>
             <a href="about-us.html" class="nav-link w-nav-link">About Us</a>
-            <a id="nav-quick-purchase" @click="quickPurchaseClicked()" class="nav-link w-nav-link">Quick Purchase</a>
+            <a id="nav-quick-purchase" @click="quickPurchaseClicked()" class="nav-link w-nav-link">Quick Enquiry</a>
             <a href="safety-tips.html" class="nav-link w-nav-link">Safety Tips</a>
             <a href="contest-2025.html" class="nav-link w-nav-link">Combo Details</a>
             <a href="contact-us.html" aria-current="page" class="nav-link w-nav-link w--current">Contact Us</a>
@@ -221,7 +221,7 @@
           <div class="footer-header">Quick Links</div>
           <div class="footer-block">
             <a href="index.html" class="footer-link">Home</a>
-            <a @click="quickPurchaseClicked()" class="footer-link w-inline-block">Quick Purchase</a>
+            <a @click="quickPurchaseClicked()" class="footer-link w-inline-block">Quick Enquiry</a>
             <a href="contest-2025.html" class="footer-link">Combo Details</a>
             <a href="about-us.html" class="footer-link w-inline-block">About Us</a>
             <a href="contact-us.html" aria-current="page" class="footer-link w-inline-block w--current">Contact Us</a>
