--- a/public/contest-2025.html
+++ b/public/contest-2025.html
@@ -111,7 +111,7 @@
           <div class="navlinks-wrapper">
             <a href="index.html" class="nav-link w-nav-link">Home</a>
             <a href="about-us.html" class="nav-link w-nav-link">About Us</a>
-            <a id="nav-quick-purchase" @click="quickPurchaseClicked()" class="nav-link w-nav-link">Quick Purchase</a>
+            <a id="nav-quick-purchase" @click="quickPurchaseClicked()" class="nav-link w-nav-link">Quick Enquiry</a>
             <a href="safety-tips.html" class="nav-link w-nav-link">Safety Tips</a>
             <a href="contest-2025.html" aria-current="page" class="nav-link w-nav-link w--current">Combo Details</a>
             <a href="contact-us.html" class="nav-link w-nav-link">Contact Us</a>
