--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
         <div class="navlinks-wrapper">
           <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
           <a href="about-us.html" class="nav-link w-nav-link">About Us</a>
-          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Purchase</a>
+          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Enquiry</a>
           <a href="safety-tips.html" class="nav-link w-nav-link">Safety Tips</a>
           <a href="contest-2025.html" class="nav-link w-nav-link">Combo Details</a>
           <a href="contact-us.html" class="nav-link w-nav-link">Contact Us</a>
@@ -386,7 +386,7 @@
         <div class="footer-header">Quick Links</div>
         <div class="footer-block">
           <a href="index.html" aria-current="page" class="footer-link w--current">Home</a>
-          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Purchase</a>
+          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Enquiry</a>
           <a href="contest-2025.html" class="footer-link">Combo Details</a>
           <a href="about-us.html" class="footer-link w-inline-block">About Us</a>
           <a href="contact-us.html" class="footer-link w-inline-block">Contact Us</a>
