--- a/public/quick-purchase1.html
+++ b/public/quick-purchase1.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Quick Purchase</title>
+  <title>Quick Enquiry</title>
   <!-- jsPDF CDN for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
   <meta
     content="Our aim is to produce products complying with high level of consumer safety standards with affordable pricing our main motto is “our customer joy is our pride”. We serve quality crackers to our customer to make their days as colorful celebration. We have products of hi-fi quality standards complying with all global standards and specifications."
     name="description">
-  <meta content="Quick Purchase" property="og:title">
+  <meta content="Quick Enquiry" property="og:title">
   <meta
     content="Our aim is to produce products complying with high level of consumer safety standards with affordable pricing our main motto is “our customer joy is our pride”. We serve quality crackers to our customer to make their days as colorful celebration. We have products of hi-fi quality standards complying with all global standards and specifications."
     property="og:description">
-  <meta content="Quick Purchase" property="twitter:title">
+  <meta content="Quick Enquiry" property="twitter:title">
   <meta
     content="Our aim is to produce products complying with high level of consumer safety standards with affordable pricing our main motto is “our customer joy is our pride”. We serve quality crackers to our customer to make their days as colorful celebration. We have products of hi-fi quality standards complying with all global standards and specifications."
     property="twitter:description">
@@ -72,7 +72,7 @@
           <div class="navlinks-wrapper">
             <a href="index.html" class="nav-link w-nav-link">Home</a>
             <a href="about-us.html" class="nav-link w-nav-link">About Us</a>
-            <a href="quick-purchase.html" aria-current="page" class="nav-link w-nav-link w--current">Quick Purchase</a>
+            <a href="quick-purchase.html" aria-current="page" class="nav-link w-nav-link w--current">Quick Enquiry</a>
             <a href="safety-tips.html" class="nav-link w-nav-link">Safety Tips</a>
             <a href="contest-2025.html" class="nav-link w-nav-link">Contest 2025</a>
             <a href="contact-us.html" class="nav-link w-nav-link">Contact Us</a>
@@ -106,7 +106,7 @@
     </div>
     <div class="quick-purchase-section wf-section">
       <div class="heading-container">
-        <h1>Quick Purchase</h1>
+        <h1>Quick Enquiry</h1>
         <div class="heading-divider"></div>
       </div>
       <div class="quick-purchase-container">
@@ -398,7 +398,7 @@
           <div class="footer-block">
             <a href="index.html" class="footer-link">Home</a>
             <a href="quick-purchase.html" aria-current="page" class="footer-link w-inline-block w--current">Quick
-              Purchase</a>
+              Enquiry</a>
             <a href="contest-2025.html" class="footer-link">Contest 2025</a>
             <a href="about-us.html" class="footer-link w-inline-block">About Us</a>
             <a href="contact-us.html" class="footer-link w-inline-block">Contact Us</a>
