--- a/public/about-us.html
+++ b/public/about-us.html
@@ -65,7 +65,7 @@
         <div class="navlinks-wrapper">
           <a href="index.html" class="nav-link w-nav-link">Home</a>
           <a href="about-us.html" aria-current="page" class="nav-link w-nav-link w--current">About Us</a>
-          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Purchase</a>
+          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Enquiry</a>
           <a href="safety-tips.html" class="nav-link w-nav-link">Safety Tips</a>
           <a href="contest-2025.html" class="nav-link w-nav-link">Combo Details</a>
           <a href="contact-us.html" class="nav-link w-nav-link">Contact Us</a>
@@ -167,7 +167,7 @@
         <div class="footer-header">Quick Links</div>
         <div class="footer-block">
           <a href="index.html" class="footer-link">Home</a>
-          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Purchase</a>
+          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Enquiry</a>
           <a href="contest-2025.html" class="footer-link">Combo Details</a>
           <a href="about-us.html" aria-current="page" class="footer-link w-inline-block w--current">About Us</a>
           <a href="contact-us.html" class="footer-link w-inline-block">Contact Us</a>
