--- a/public/safety-tips.html
+++ b/public/safety-tips.html
@@ -65,7 +65,7 @@
         <div class="navlinks-wrapper">
           <a href="index.html" class="nav-link w-nav-link">Home</a>
           <a href="about-us.html" class="nav-link w-nav-link">About Us</a>
-          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Purchase</a>
+          <a id="nav-quick-purchase" class="nav-link w-nav-link">Quick Enquiry</a>
           <a href="safety-tips.html" aria-current="page" class="nav-link w-nav-link w--current">Safety Tips</a>
           <a href="contest-2025.html" class="nav-link w-nav-link">Combo Details</a>
           <a href="contact-us.html" class="nav-link w-nav-link">Contact Us</a>
@@ -187,7 +187,7 @@
       </div>
       <div class="safety-dont-container">
         <div class="safety-tip-pic-container"><img src="images/cancel.png" loading="lazy" alt=""></div>
-        <div class="safety-tip-text">Do not store fireworks near burning candles or lamps</div>
+        <div class="safety-tip-text">
       </div>
     </div>
   </div>
@@ -207,7 +207,7 @@
         <div class="footer-header">Quick Links</div>
         <div class="footer-block">
           <a href="index.html" class="footer-link">Home</a>
-          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Purchase</a>
+          <a id='footer-quick-purchase' class="footer-link w-inline-block">Quick Enquiry</a>
           <a href="contest-2025.html" class="footer-link">Combo Details</a>
           <a href="about-us.html" class="footer-link w-inline-block">About Us</a>
           <a href="contact-us.html" class="footer-link w-inline-block">Contact Us</a>
