--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -205,7 +205,7 @@
         <a @click="quickPurchaseClicked()" class="products-button w-button">View Our Products</a>
       </div>
     </div>
-    <a @click="quickPurchaseClicked()" class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
+    <!-- <a @click="quickPurchaseClicked()" class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a> -->
     <div class="footer-section wf-section">
       <div class="w-layout-grid footer-grid">
         <div id="w-node-_0aa2baa9-e1c1-a2d0-3be7-62f9c58af4e7-d3a5d38f" class="footer-text-block">
