--- a/public/contest-2025.html
+++ b/public/contest-2025.html
@@ -188,7 +188,7 @@
       </div>
     </div>
     
-    <a id='float-quick-purchase' @click="quickPurchaseClicked()" class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
+    <!-- <a id='float-quick-purchase' @click="quickPurchaseClicked()" class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a> -->
     <div class="contest-section wf-section" style="display:none;">
       <div class="heading-container">
         <h1>JCS Combo Details</h1>
