--- a/public/safety-tips.html
+++ b/public/safety-tips.html
@@ -191,7 +191,7 @@
       </div>
     </div>
   </div>
-  <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
+  <!-- <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a> -->
   <div class="footer-section wf-section">
     <div class="w-layout-grid footer-grid">
       <div id="w-node-_0aa2baa9-e1c1-a2d0-3be7-62f9c58af4e7-d3a5d38f" class="footer-text-block">
