quick-enquiry-logo

--- a/public/about-us.html
+++ b/public/about-us.html
@@ -151,7 +151,7 @@
       <a id="viewProductsQuickPurchase" class="products-button w-button">View Our Products</a>
     </div>
   </div>
-  <!-- <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a> -->
+  <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-enquiry-removebg-preview.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
   <div class="footer-section wf-section">
     <div class="w-layout-grid footer-grid">
       <div id="w-node-_0aa2baa9-e1c1-a2d0-3be7-62f9c58af4e7-d3a5d38f" class="footer-text-block">
