--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@
         data-default-duration="6" data-duration="0" class="bg-lottie"></div>
     </a>
   </div>
-  <!-- <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-purchase.png" loading="lazy" alt="" class="quick-purchase-pic"></a> -->
+  <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-enquiry-removebg-preview.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
   <div class="services-section wf-section">
     <div class="heading-container">
       <h1>Our Services</h1>
