quick-enquiry-logo

--- a/public/index.html
+++ b/public/index.html
@@ -237,8 +237,7 @@
   </div>
   <div class="banner-section wf-section">
     <a data-w-id="e1c0ab3d-503a-765e-00c4-92a8850f3be6" style="opacity:0" href="contest-2025.html" class="bg-lottie-container w-inline-block">
-      <div data-w-id="4c5f1bd2-f0ad-df53-8fa5-963be5c4265b" data-animation-type="lottie" data-src="documents/Join-JCS-Contest-2K21.mov.lottie.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
-        data-default-duration="6" data-duration="0" class="bg-lottie"></div>
+      <img src="images/new_image.jpg" alt="Contest Banner" class="bg-lottie" />
     </a>
   </div>
   <a id='float-quick-purchase' class="quick-purchase-pic w-inline-block"><img src="images/quick-enquiry-removebg-preview.png" loading="lazy" alt="" class="quick-purchase-pic"></a>
